--- a/app/src/main/res/layout/activity_single_post.xml
+++ b/app/src/main/res/layout/activity_single_post.xml
@@ -4,20 +4,40 @@
     android:id="@+id/activity_single_post"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.android.dmaharjan.androidrest.activities.SinglePost">
+
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Test"
-        android:textAlignment="center"
-        android:layout_height="wrap_content" />
+        android:textAlignment="center" />
+
     <TextView
         android:id="@+id/textViewContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/updatePost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit" />
+
+        <Button
+            android:id="@+id/deletePost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete" />
+    </LinearLayout>
 </LinearLayout>
